# DeepReason

./: .gitattributes  .gitignore  LICENSE  README.md  pyproject.toml
config/: deepseek.yaml  default.yaml  ollama-live.yaml
docs/: AGENT.md  AUTONOMICS_REPORT.md  AUTONOMOUS_SIMULATION_MIGRATION.md  BASIN_REPORT.md  CACHE_DESIGN.md  CAN_LLMS_EXPLORE.md  CONTROLLER_SPEC.md  EXPERIMENT_PROGRAM_2026-07.md  JOLT_CONTROL_PLANE_MIGRATION.md  MINI_PLAN.md  MINI_STRESS_REPORT.md  OPERATOR_DIAGNOSIS.md  REPORT.md  RUNTIME_IMPORTS.md  RUN_PLAN_TEMPLATE.md  SCRATCHPAD_GROUNDED_BRIDGE.md  SELF_IMPROVEMENT.md  SMALL_MODEL_COMPATIBILITY.md  SMALL_MODEL_CONTRACT.md  STATE_OF_THE_THEORY.md  STRESS_FINDINGS.md  STRESS_INSIGHTS.md  TOKEN_ECONOMY.md  TRANCHE_A_AUTONOMOUS_SIMULATION.md  harness-spec-v1.3.md  harness-spec-v1.4-amendment.md  harness-spec-v1.5-amendment.md  harness-spec-v1.6-amendment.md
experiments/: basin_study_prereg.yaml  boden_prereg.yaml  bronze_court_cross_v1_prereg.yaml  bronze_evidence_dossier_v1.json  bronze_feedback_v1_prereg.yaml  bronze_feedback_v2_prereg.yaml  bronze_flat_v1_prereg.yaml  bronze_repertoire_v2_prereg.yaml  circularity_verifier_prereg.yaml  court_calibration_v1_prereg.yaml  court_cross_pool_v1.json  critic_specificity_prereg.yaml  criticism_decisive_prereg.yaml  defended_trial_v1_prereg.yaml  e01_embedder_recalibration_prereg.yaml  e02_judge_redteam_prereg.yaml  e02_t2_voting_prereg.yaml  e02_t2b_clean_readjudication_prereg.yaml  e02_t3_judge_zoo_prereg.yaml  e02_t3_run_live.out  e03_detector_calibration_prereg.yaml  frontier_compat_baseline_prereg_v1.json  glm_flat_v1_prereg.yaml  informal_ab_prereg.yaml  jolt_positive_headroom_v3_1_calibration_instances.json  jolt_positive_headroom_v3_1_calibration_plan.json  jolt_positive_headroom_v3_1_instances.json  jolt_positive_headroom_v3_1_optima.json  jolt_trigger_glm52_pilot_prereg.yaml  jolt_trigger_glm52_pilot_v2_prereg.yaml  jolt_trigger_v1_manifest_plan.json  jolt_trigger_v1_prereg.yaml  judge_liability_index_prereg.yaml  lambda_preregistration.yaml  lambda_preregistration_v2.yaml  live_smoke_v1_prereg.yaml  mini_creativity_prompt.txt  nemotron12b_replication_prereg.yaml  rank_concentration_prereg.yaml  schema_comparator_forms_v1.json  (+11 more)
mini/: README.md
scripts/: autonomous_inquiry_campaign.py  basin_live.py  basin_study.py  boden_experiment.py  bronze_census.py  bronze_counterfactuals.py  bronze_flat_report.py  bronze_nomic_rescore.py  cachebench.py  chaos_battery.py  circularity_check.py  compatibility_eval.py  court_calibration_corpus.py  court_calibration_run.py  court_cross_pool.py  court_cross_run.py  court_cross_score.py  critic_spec_corpus.py  critic_spec_run.py  critic_spec_score.py  defended_trial_run.py  defended_trial_score.py  e01_paraphrase_pairs.py  e01_run.py  e02_adversary.py  e02_judge.py  e02_score.py  e02_t2_score.py  e02_t2b_readjudicate.py  e02_t3_run.py  e02_t3_score.py  e03_run.py  e03_synthetic_regimes.py  (+22 more)
(+829 files in other folders)
