[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "deepreason"
version = "0.1.0"
description = "Conjecture-Criticism Harness (creativity-calculus build spec v1.3)"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "pydantic>=2.7",
    "pyyaml>=6.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "ruff>=0.4",
]

[project.scripts]
deepreason = "deepreason.cli.main:main"

[tool.hatch.build.targets.wheel]
packages = ["src/deepreason"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
src = ["src", "tests"]
