[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "deepreason"
version = "0.1.0"
description = "Conjecture-Criticism Harness (creativity-calculus build spec v1.3)"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "pydantic>=2.7",
    "pyyaml>=6.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "ruff>=0.4",
]
# Browser oracle (src/deepreason/browser.py): headless-Chromium evaluation of
# single-file web-app candidates. Optional — the harness runs without it.
browser = [
    "playwright>=1.45",
]
# Neural embedder (src/deepreason/llm/embedder.py): ONNX/CPU semantic
# embeddings via fastembed, enabled by the EMBEDDER_MODEL knob. Optional —
# without it the harness keeps the zero-dependency hashing embedder, and a
# configured-but-missing backend degrades visibly (embedder-fallback on the
# log). Recalibrate distance thresholds when switching (deepreason calibrate).
embed = [
    "fastembed>=0.3",
]

[project.scripts]
deepreason = "deepreason.cli.main:main"
deepreason-mcp = "deepreason.mcp_server:main"

[tool.hatch.build.targets.wheel]
packages = ["src/deepreason", "mini/minireason"]

[tool.pytest.ini_options]
testpaths = ["tests", "mini/tests"]

[tool.ruff]
line-length = 100
src = ["src", "tests", "mini"]
